--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "expo-font": "~10.0.4",
-    "expo-constants": "~13.0.1"
+    "expo-constants": "~13.0.1",
+    "react-native-gesture-handler": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
