--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-maps": "0.29.4",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "expo-image-picker": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
