--- a/app.json
+++ b/app.json
@@ -15,15 +15,29 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "The app accesses your photos to let you pick images for creating an article.",
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.ganiirsyadi.mybikunapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -35,6 +49,11 @@
           "photosPermission": "The app accesses your photos to let you pick images for creating an article."
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "22a94402-7727-4e5e-abcd-bf19f832c429"
+      }
+    }
   }
 }
