--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.16.23",
+    "@expo/webpack-config": "^0.16.19",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
-    "expo": "~44.0.0",
-    "expo-constants": "~13.0.1",
+    "expo": "^46.0.16",
+    "expo-constants": "^11.1.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "^10.2.3",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "^0.9.3",
     "native-base": "^3.4.18",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.70.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-maps": "0.29.4",
@@ -30,10 +32,8 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-updates": "~0.11.7"
+    "react-native-svg": "^12.4.4",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
