--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
+    "firebase": "^8.10.1",
     "native-base": "^3.4.18",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -31,9 +34,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "expo-image-picker": "~12.0.1",
-    "expo-updates": "~0.11.7"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
