--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "eas-cli": "^2.6.0",
     "expo": "~44.0.0",
     "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
@@ -31,6 +32,7 @@
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "~2.3.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
