--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.23.1"
+    "react-native-webview": "^11.23.1",
+    "expo-secure-store": "~11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
