--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "firebase": "^8.10.1",
@@ -26,6 +27,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-background-geolocation": "^4.9.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-maps": "0.29.4",
