--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "expo-constants": "~13.0.1",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
-    "expo-location": "^15.0.1",
+    "expo-location": "~14.0.1",
+    "expo-secure-store": "~11.1.0",
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.7",
     "firebase": "^8.10.1",
@@ -39,8 +40,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.23.1",
-    "expo-secure-store": "~11.1.0"
+    "react-native-webview": "11.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
