--- a/package.json
+++ b/package.json
@@ -9,41 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.16.23",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "eas-cli": "^2.6.0",
-    "expo": "~44.0.0",
-    "expo-constants": "~13.0.1",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-location": "~14.0.1",
-    "expo-secure-store": "~11.1.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
+    "expo": "^47.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-location": "~15.0.1",
+    "expo-secure-store": "~12.0.0",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "firebase": "^8.10.1",
     "native-base": "^3.4.18",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-background-geolocation": "^4.9.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-image-base64": "^0.1.4",
-    "react-native-maps": "0.29.4",
+    "react-native-maps": "1.3.2",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-picker-select": "^8.0.4",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
